# qml_canvas

./: CMakeLists.txt
src/: main.cpp  main.qml
